noinst_LTLIBRARIES = libccan.la
libccan_la_SOURCES = \
	ccan/alignof/alignof.h \
	ccan/array_size/array_size.h \
	ccan/build_assert/build_assert.h \
	ccan/check_type/check_type.h \
	ccan/compiler/compiler.h \
	ccan/container_of/container_of.h \
	ccan/endian/endian.h \
	ccan/ilog/ilog.c \
	ccan/ilog/ilog.h \
	ccan/io/backend.h \
	ccan/io/io.c \
	ccan/io/io.h \
	ccan/io/io_plan.h \
	ccan/io/poll.c \
	ccan/likely/likely.c \
	ccan/likely/likely.h \
	ccan/list/list.c \
	ccan/list/list.h \
	ccan/membuf/membuf.c \
	ccan/membuf/membuf.h \
	ccan/short_types/short_types.h \
	ccan/str/str.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/take/take.c \
	ccan/take/take.h \
	ccan/tal/str/str.c \
	ccan/tal/str/str.h \
	ccan/tal/tal.c \
	ccan/tal/tal.h \
	ccan/tcon/tcon.h \
	ccan/time/time.c \
	ccan/time/time.h \
	ccan/timer/timer.c \
	ccan/timer/timer.h \
	ccan/typesafe_cb/typesafe_cb.h

EXTRA_DIST = \
	ccan/alignof/LICENSE \
	ccan/array_size/LICENSE \
	ccan/build_assert/LICENSE \
	ccan/check_type/LICENSE \
	ccan/compiler/LICENSE \
	ccan/container_of/LICENSE \
	ccan/endian/LICENSE \
	ccan/ilog/LICENSE \
	ccan/io/LICENSE \
	ccan/likely/LICENSE \
	ccan/list/LICENSE \
	ccan/membuf/LICENSE \
	ccan/short_types/LICENSE \
	ccan/str/LICENSE \
	ccan/take/LICENSE \
	ccan/tal/LICENSE \
	ccan/tal/str/LICENSE \
	ccan/tcon/LICENSE \
	ccan/time/LICENSE \
	ccan/timer/LICENSE \
	ccan/typesafe_cb/LICENSE \
	licenses/BSD-MIT \
	licenses/CC0 \
	licenses/GPL-2 \
	licenses/LGPL-2.1 \
	licenses/LGPL-3

ACLOCAL_AMFLAGS = -I m4
