noinst_LTLIBRARIES = libccan.la
libccan_la_SOURCES = \
	ccan/alignof/alignof.h \
	ccan/array_size/array_size.h \
	ccan/autodata/autodata.c \
	ccan/autodata/autodata.h \
	ccan/bitops/bitops.c \
	ccan/bitops/bitops.h \
	ccan/build_assert/build_assert.h \
	ccan/check_type/check_type.h \
	ccan/compiler/compiler.h \
	ccan/container_of/container_of.h \
	ccan/cppmagic/cppmagic.h \
	ccan/crypto/sha256/sha256.c \
	ccan/crypto/sha256/sha256.h \
	ccan/endian/endian.h \
	ccan/err/err.c \
	ccan/err/err.h \
	ccan/ilog/ilog.c \
	ccan/ilog/ilog.h \
	ccan/intmap/intmap.c \
	ccan/intmap/intmap.h \
	ccan/io/backend.h \
	ccan/io/io.c \
	ccan/io/io.h \
	ccan/io/io_plan.h \
	ccan/io/poll.c \
	ccan/json_escape/json_escape.c \
	ccan/json_escape/json_escape.h \
	ccan/json_out/json_out.c \
	ccan/json_out/json_out.h \
	ccan/likely/likely.c \
	ccan/likely/likely.h \
	ccan/list/list.c \
	ccan/list/list.h \
	ccan/mem/mem.c \
	ccan/mem/mem.h \
	ccan/membuf/membuf.c \
	ccan/membuf/membuf.h \
	ccan/read_write_all/read_write_all.c \
	ccan/read_write_all/read_write_all.h \
	ccan/short_types/short_types.h \
	ccan/str/hex/hex.c \
	ccan/str/hex/hex.h \
	ccan/str/str.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/strmap/strmap.c \
	ccan/strmap/strmap.h \
	ccan/structeq/structeq.h \
	ccan/take/take.c \
	ccan/take/take.h \
	ccan/tal/str/str.c \
	ccan/tal/str/str.h \
	ccan/tal/tal.c \
	ccan/tal/tal.h \
	ccan/tcon/tcon.h \
	ccan/time/time.c \
	ccan/time/time.h \
	ccan/timer/timer.c \
	ccan/timer/timer.h \
	ccan/typesafe_cb/typesafe_cb.h

EXTRA_DIST = \
	ccan/alignof/LICENSE \
	ccan/array_size/LICENSE \
	ccan/autodata/LICENSE \
	ccan/bitops/LICENSE \
	ccan/build_assert/LICENSE \
	ccan/check_type/LICENSE \
	ccan/compiler/LICENSE \
	ccan/container_of/LICENSE \
	ccan/cppmagic/LICENSE \
	ccan/crypto/sha256/LICENSE \
	ccan/endian/LICENSE \
	ccan/err/LICENSE \
	ccan/ilog/LICENSE \
	ccan/intmap/LICENSE \
	ccan/io/LICENSE \
	ccan/json_escape/LICENSE \
	ccan/json_out/LICENSE \
	ccan/likely/LICENSE \
	ccan/list/LICENSE \
	ccan/mem/LICENSE \
	ccan/membuf/LICENSE \
	ccan/read_write_all/LICENSE \
	ccan/short_types/LICENSE \
	ccan/str/LICENSE \
	ccan/str/hex/LICENSE \
	ccan/strmap/LICENSE \
	ccan/structeq/LICENSE \
	ccan/take/LICENSE \
	ccan/tal/LICENSE \
	ccan/tal/str/LICENSE \
	ccan/tcon/LICENSE \
	ccan/time/LICENSE \
	ccan/timer/LICENSE \
	ccan/typesafe_cb/LICENSE \
	licenses/BSD-MIT \
	licenses/CC0 \
	licenses/GPL-2 \
	licenses/LGPL-2.1 \
	licenses/LGPL-3

ACLOCAL_AMFLAGS = -I m4
